# ftdv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README.org  config.example.yaml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  docs.yml  release.yml
src/: cli.rs  config.rs  diff.rs  git.rs  icons.rs  main.rs  parser.rs  persistence.rs  render.rs  theme.rs  tree.rs
